tests/paczka1/small_fuzzy/88819470.err
Error in line 4: A974 S229 76,4
Error in line 9: Ooq3RDPgp A974 69,8
Error in line 11: Ooq3RDPgp S229 10,0
Error in line 3: 9QdNTPbHSyY A287 8,4
